--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -11,18 +12,30 @@
             <h1>Nexus Eports</h1>
         </div>
         <div class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Tournament</a>
-            <a href="#">Teams</a>
-            <a href="#">Games</a>
-            <a href="#">Events</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Tournament</a></li>
+            <li><a href="#">Teams</a></li>
+            <li><a href="#">Games</a></li> 
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
             <div class="btnNav">
                 <button type="button" onclick="window.location.href='#'">Join Tournament</button>
             </div>
 
         </div>
+
     </nav>
+
+        <footer>
+                
+
+
+
+
+        </footer>
+
 </body>
 </html>
