add footer HTML

--- a/index.html
+++ b/index.html
@@ -1,41 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav>
-        <div class="logo">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+      <nav class="navbar flex">
+         <div class="logo">
             <h1>Nexus Eports</h1>
-        </div>
-        <div class="navbar">
-            <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Tournament</a></li>
-            <li><a href="#">Teams</a></li>
-            <li><a href="#">Games</a></li> 
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-            <div class="btnNav">
-                <button type="button" onclick="window.location.href='#'">Join Tournament</button>
+         </div>
+         <div class="nav-pages flex">
+            <ul class="flex">
+               <li><a href="#">Home</a></li>
+               <li><a href="#">Tournament</a></li>
+               <li><a href="#">Teams</a></li>
+               <li><a href="#">Games</a></li>
+               <li><a href="#">Events</a></li>
+               <li><a href="#">Blog</a></li>
+               <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="btn btnNav">
+               <button type="button" onclick="window.location.href='#'">Join Tournament</button>
             </div>
-
-        </div>
-
-    </nav>
-
-        <footer>
-                
-
+            <div class="btn btnLS">
+               <button type="button" onclick="window.location.href='#'">LOGIN</button>
+               <button type="button" onclick="window.location.href='#'">SIGN UP</button>
+            </div>
+         </div>
+      </nav>
 
 
 
-        </footer>
 
-</body>
+
+
+      <footer>
+         <div class="partie1 flex">
+            <div>
+               <div class="logo">
+                  <h3>E-SPORTS NEXUS</h3>
+               </div>
+               <div class="text">
+                  <p>  The ultimate platform for competitive gaming. Join tournaments, connect with teams, and rise through the ranks.</p>
+               </div>
+            </div>
+            <div>
+               <div class="titre">
+                  <h4>Platform</h4>
+               </div>
+               <div class="text">
+                  <a href="#">Tournaments</a>
+                  <br>
+                  <a href="#">Teams</a>
+                  <br>
+                  <a href="#">Games</a>
+                  <br>
+                  <a href="#">Rankings</a>
+                  <br>
+                  <a href="#">Live Streams</a>
+               </div>
+            </div>
+            <div>
+               <div class="titre">
+                  <h4>Company</h4>
+               </div>
+               <div class="text">
+                  <a href=" #">About us</a>
+                  <br>
+                  <a href="#">Careers</a>
+                  <br>
+                  <a href=" #">Press Kit</a>
+                  <br>
+                  <a href="#">Partners</a>
+                  <br>
+                  <a href="#">Blog</a>
+               </div>
+            </div>
+            <div class="side-4">
+               <div class="titre">
+                  <h4>Support</h4>
+               </div>
+               <div class="text">
+                  <a href="#">Help Center</a>
+                  <br>
+                  <a href="#">Terms of Service</a>
+                  <br>
+                  <a href="#">Privacy Policy</a>
+                  <br>
+                  <a href="#">Cookie Policy</a>
+                  <br>
+                  <a href="#">Contact</a>
+               </div>
+            </div>
+         </div>
+
+
+         <div class="partie2 flex">
+            <div class="email">
+               <h5>email</h5>
+               <a href="email">test@.com</a>
+            </div>
+            <div>
+               <h5>phone</h5>
+               <a href="#">+21228784372</a>
+            </div>
+            <div>
+               <h5>location</h5>
+               <a href="#">location</a>
+            </div>
+         </div>
+
+
+         </div>
+         <div class="partie3 flex">
+            <div>
+               <p>2025 E-Sport Nexus. All rights reserved.</p>
+            </div>
+            <div class="text ">
+               <a href="">privacy</a>
+               <a href="">teams</a>
+               <a href="">cookies</a>
+            </div>
+         </div>
+      </footer>
+   </body>
 </html>
