--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                <button type="button" onclick="window.location.href='#'">Start Competing</button>
       </div>
       <div class="trailer-btn">
-         <button type="button" onclick="window.location.href='#'">Start Competing</button>
+         <button type="button" onclick="window.location.href='#'">Watch Trailer</button>
 
       </div> 
       </div>
@@ -139,7 +139,7 @@
 
          <div class="footer-middle flex"> 
             <div class="contact-item flex">
-               <i class="fa-solid fa-envelope" style="color: #74C0FC;"></i>
+               <i class="fa-solid fa-envelope fa-xl" style="color: #74C0FC;"></i>
                <div class="footer-middle-contacts">
                <h5>Email</h5>
                <p><a href="mailto:someone@example.com">contact@esportnexus.gg</a></p>
@@ -147,7 +147,7 @@
                
             </div>
             <div class="contact-item flex">
-               <i class="fa-solid fa-phone" style="color: #74C0FC;"></i>           
+               <i class="fa-solid fa-phone fa-xl" style="color: #B197FC;"></i>         
                   <div class="footer-middle-contacts">
                   <h5>Phone</h5>
                <p><a href="tel:+123456789">+123-456-789</a></p>
@@ -156,7 +156,7 @@
             </div>
 
             <div class="contact-item flex">
-               <i class="fa-solid fa-location-dot" style="color: #74C0FC;"></i>             
+               <i class="fa-solid fa-location-dot fa-xl" style="color: #74C0FC;"></i>             
                <div class="footer-middle-contacts">
                   <h5>Location</h5>
                <a href="#">Location</a>
