--- a/teams.html
+++ b/teams.html
@@ -36,132 +36,42 @@
 
       </header>
 
-      <h5 style="text-align: center;color: white; padding-bottom: 30px;">Upcoming Tournaments </h5>
+      <h5 style="text-align: center;color: white; padding-bottom: 30px;">Discover elite teams dominating the competitive scene and join the ranks of champions.</h5>
 
-<section class="cards-bl">
-<div class="card-bl">
-    <div class="imag-bl">
+<section class="cards-tm">
+<div class="card-tm">
+    <div class="imag-tm">
         <img src="./assets/blog-webp/Valorant-vs-CS2-1024x523.webp" alt="CS-tr">
     </div>
-    <div class="card-bl-txt">
+    <div class="card-tm-txt">
         <p>CS2 vs Valorant: Which Shooter Reigns Supreme?</p>
-        <p>A quick look at how these two tactical shooters compare.</p>
-        <div class="auteur">
-         <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-         <p>Alex Chan</p>
-          <i class="fa-solid fa-calendar" style="color: #74C0FC;"></i>
-         <p>Oct 10, 2025</p>  
-        </div>
-      </div>
-      <div class="read">
-                <a href="">Read More </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #74C0FC;"></i></a>
-    </div>
-</div>
 
-<div class="card-bl">
-    <div class="imag-bl">
-        <img src="./assets/blog-webp/lol.webp" alt="CS-tr">
-    </div>
-    <div class="card-bl-txt">
-        <p>How to Dominate Your Role in League of Legends</p>
-        <p>Simple tips to improve your gameplay and climb ranks.</p>
-        <div class="auteur">
-         <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-         <p>Alex Chan</p>
-          <i class="fa-solid fa-calendar" style="color: #74C0FC;"></i>
-         <p>Oct 10, 2025</p>  
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
+                <p>12</p>
+            </div>
+            <div>
+                <p>Membres</p>
+            </div>
         </div>
-      </div>
-      <div class="read">
-                <a href="">Read More </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #74C0FC;"></i></a>
-    </div>
-</div>
 
-<div class="card-bl">
-    <div class="imag-bl">
-        <img src="./assets/blog-webp/esport-team.webp" alt="CS-tr">
-    </div>
-    <div class="card-bl-txt">
-        <p>Building Your Dream E-Sports Team</p>
-        <p>Simple tips to improve your gameplay and climb ranks.</p>
-        <div class="auteur">
-         <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-         <p>Alex Chan</p>
-          <i class="fa-solid fa-calendar" style="color: #74C0FC;"></i>
-         <p>Oct 10, 2025</p>  
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
+                <p>Alex Chan</p>
+        </div>  
+        <p>Oct 10, 2025</p>  
         </div>
+
       </div>
-      <div class="read">
+      <div class="view">
                 <a href="">Read More </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #74C0FC;"></i></a>
     </div>
 </div>
 </section>
 
-
-<section class="cards-bl">
-<div class="card-bl">
-    <div class="imag-bl">
-        <img src="./assets/blog-webp/eafc26.webp" alt="CS-tr">
-    </div>
-    <div class="card-bl-txt">
-        <p>Weekend League Tips for EA FC 26</p>
-        <p>Boost your wins with these quick gameplay strategies.</p>
-        <div class="auteur">
-         <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-         <p>Alex Chan</p>
-          <i class="fa-solid fa-calendar" style="color: #74C0FC;"></i>
-         <p>Oct 10, 2025</p>  
-        </div>
-      </div>
-      <div class="read">
-                <a href="">Read More </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #74C0FC;"></i></a>
-    </div>
-</div>
-
-<div class="card-bl">
-    <div class="imag-bl">
-        <img src="./assets/blog-webp/eSport-Cup-erstellen.webp" alt="CS-tr">
-    </div>
-    <div class="card-bl-txt">
-        <p>How We Run Our Gaming Tournaments</p>
-        <p>A quick peek behind the scenes of our events.</p>
-        <div class="auteur">
-         <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-         <p>Alex Chan</p>
-          <i class="fa-solid fa-calendar" style="color: #74C0FC;"></i>
-         <p>Oct 10, 2025</p>  
-        </div>
-      </div>
-      <div class="read">
-                <a href="">Read More </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #74C0FC;"></i></a>
-    </div>
-</div>
-
-<div class="card-bl">
-    <div class="imag-bl">
-        <img src="./assets/blog-webp/fortnite.webp" alt="CS-tr">
-    </div>
-    <div class="card-bl-txt">
-        <p>Fortnite Creative: Game Modes to Try Now</p>
-        <p>Check out the best custom maps in Fortnite Creative.</p>
-        <div class="auteur">
-         <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-         <p>Alex Chan</p>
-          <i class="fa-solid fa-calendar" style="color: #74C0FC;"></i>
-         <p>Oct 10, 2025</p>  
-        </div>
-      </div>
-      <div class="read">
-                <a href="">Read More </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #74C0FC;"></i></a>
-    </div>
-</div>
-</section>
 
 <section class="signupNow">
       <div class="signupNow-carte">
