--- a/teams.html
+++ b/teams.html
@@ -41,33 +41,251 @@
 <section class="cards-tm">
 <div class="card-tm">
     <div class="imag-tm">
-        <img src="./assets/blog-webp/Valorant-vs-CS2-1024x523.webp" alt="CS-tr">
+        <img src="./assets/teams-webp/valo.webp" alt="neon warior">
     </div>
+    <p>Neon Warriors</p>
     <div class="card-tm-txt">
-        <p>CS2 vs Valorant: Which Shooter Reigns Supreme?</p>
-
         <div class="membre">
             <div class="nm">
-                <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-                <p>12</p>
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">12</p>
             </div>
             <div>
-                <p>Membres</p>
+                <p  style="opacity: 0.5;">Membres</p>
             </div>
         </div>
-
         <div class="wins">
         <div class="wn">
-                <i class="fa-solid fa-user" style="color: #74C0FC;"></i>      
-                <p>Alex Chan</p>
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">145</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
         </div>  
-        <p>Oct 10, 2025</p>  
         </div>
-
       </div>
       <div class="view">
-                <a href="">Read More </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #74C0FC;"></i></a>
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+    </div>
+</div>
+
+<div class="card-tm">
+    <div class="imag-tm">
+        <img src="./assets/teams-webp/CS.webp" alt="CS-tr">
+    </div>
+    <p>Cyber Titans</p>
+    <div class="card-tm-txt">
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">10</p>
+            </div>
+            <div>
+                <p  style="opacity: 0.5;">Membres</p>
+            </div>
+        </div>
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">132</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
+        </div>  
+        </div>
+      </div>
+      <div class="view">
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+    </div>
+</div>
+
+<div class="card-tm">
+    <div class="imag-tm">
+        <img src="./assets/teams-webp/ninjas-in-pyjamas.webp" alt="ninjas-in-pyjamas">
+    </div>
+    <p>Phoenix Squad</p>
+    <div class="card-tm-txt">
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">15</p>
+            </div>
+            <div>
+                <p  style="opacity: 0.5;">Membres</p>
+            </div>
+        </div>
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">128</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
+        </div>  
+        </div>
+      </div>
+      <div class="view">
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+    </div>
+</div>
+
+<div class="card-tm">
+    <div class="imag-tm">
+        <img src="./assets/teams-webp/Evos.webp" alt="Evos">
+    </div>
+    <p>EVOS Gaming</p>
+    <div class="card-tm-txt">
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">11</p>
+            </div>
+            <div>
+                <p  style="opacity: 0.5;">Membres</p>
+            </div>
+        </div>
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">115</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
+        </div>  
+        </div>
+      </div>
+      <div class="view">
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+    </div>
+</div>
+</section>
+
+<section class="cards-tm">
+<div class="card-tm">
+    <div class="imag-tm">
+        <img src="./assets/teams-webp/Pubg.webp" alt="Pubg-team">
+    </div>
+    <p>PUBG Team</p>
+    <div class="card-tm-txt">
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">21</p>
+            </div>
+            <div>
+                <p  style="opacity: 0.5;">Membres</p>
+            </div>
+        </div>
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">123</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
+        </div>  
+        </div>
+      </div>
+      <div class="view">
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+    </div>
+</div>
+
+<div class="card-tm">
+    <div class="imag-tm">
+        <img src="./assets/teams-webp/landing-crest.webp" alt="Vortex">
+    </div>
+    <p>Vortex</p>
+    <div class="card-tm-txt">
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">19</p>
+            </div>
+            <div>
+                <p  style="opacity: 0.5;">Membres</p>
+            </div>
+        </div>
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">145</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
+        </div>  
+        </div>
+      </div>
+      <div class="view">
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+    </div>
+</div>
+
+<div class="card-tm">
+    <div class="imag-tm">
+        <img src="./assets/teams-webp/foxy.webp" alt="Foxy squad">
+    </div>
+    <p>FOXY Squad</p>
+    <div class="card-tm-txt">
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">18</p>
+            </div>
+            <div>
+                <p  style="opacity: 0.5;">Membres</p>
+            </div>
+        </div>
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">113</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
+        </div>  
+        </div>
+      </div>
+      <div class="view">
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+    </div>
+</div>
+
+<div class="card-tm">
+    <div class="imag-tm">
+        <img src="./assets/teams-webp/ninj.webp" alt="NINJA-Gaming-logo">
+    </div>
+    <p>NINJA Gaming</p>
+    <div class="card-tm-txt">
+        <div class="membre">
+            <div class="nm">
+                <i class="fa-solid fa-users fa-lg" style="color:#00cfff"></i>      
+                <p style="color:#00cfff">23</p>
+            </div>
+            <div>
+                <p  style="opacity: 0.5;">Membres</p>
+            </div>
+        </div>
+        <div class="wins">
+        <div class="wn">
+                <i class="fa-solid fa-medal fa-lg" style="color: #B300FF;"></i>     
+                <p style="color: #B300FF;">110</p>
+        </div> 
+        <div>
+          <p style="opacity: 0.5;">Win</p>  
+        </div>  
+        </div>
+      </div>
+      <div class="view">
+                <a href="#" style="color: #B300FF;">Read More </a>
+               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 </section>
