--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
          </div>
          <div class="nav-content flex">
             <ul class="flex">
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Tournament</a></li>
-               <li><a href="#">Teams</a></li>
-               <li><a href="#">Games</a></li>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="tournament.html">Tournament</a></li>
+               <li><a href="teams.html">Teams</a></li>
+               <li><a href="games.html">Games</a></li>
                <li><a href="#">Events</a></li>
-               <li><a href="#">Blog</a></li>
+               <li><a href="blog.html">Blog</a></li>
                <li><a href="#">Contact</a></li>
             </ul>
             <div class="btn btn-join">
