--- a/teams.html
+++ b/teams.html
@@ -9,19 +9,19 @@
 
 </head>
 <body>
-    <header>
+     <header>
          <nav class="main-nav flex">
          <div class="logo">
             <a href="#">Nexus Esports</a>
          </div>
          <div class="nav-content flex">
             <ul class="flex">
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Tournament</a></li>
-               <li><a href="#">Teams</a></li>
-               <li><a href="#">Games</a></li>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="tournament.html">Tournament</a></li>
+               <li><a href="teams.html">Teams</a></li>
+               <li><a href="games.html">Games</a></li>
                <li><a href="#">Events</a></li>
-               <li><a href="#">Blog</a></li>
+               <li><a href="blog.html">Blog</a></li>
                <li><a href="#">Contact</a></li>
             </ul>
             <div class="btn btn-join">
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
@@ -191,7 +191,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
@@ -222,7 +222,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
@@ -253,7 +253,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
@@ -284,7 +284,7 @@
         </div>
       </div>
       <div class="view">
-                <a href="#" style="color: #B300FF;">Read More </a>
+                <a href="#" style="color: #B300FF;">View Team </a>
                <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
