login page and sign up page

--- a/tournament.html
+++ b/tournament.html
@@ -22,14 +22,14 @@
                <li><a href="games.html">Games</a></li>
                <li><a href="#">Events</a></li>
                <li><a href="blog.html">Blog</a></li>
-               <li><a href="#">Contact</a></li>
+               <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="btn btn-join">
                <button type="button" onclick="window.location.href='#'">Join Tournament</button>
             </div>
             <div class="btn btn-auth flex">
-               <button type="button" onclick="window.location.href='#'">LOGIN</button>
-               <button type="button" onclick="window.location.href='#'">SIGN UP</button>
+               <button type="button" onclick="window.location.href='login.html'">LOGIN</button>
+               <button type="button" onclick="window.location.href='signup.html'">SIGN UP</button>
             </div>
          </div>
       </nav>
@@ -245,7 +245,7 @@
                      <li><a href="#">Terms of service</a></li>
                      <li><a href="#">Privacy Policy</a></li>
                      <li><a href="#">Cookie Policy</a></li>
-                     <li><a href="#">Contact</a></li>
+                     <li><a href="contact.html">Contact</a></li>
                   </ul>
                </div>
             </div>
