--- a/tournament.html
+++ b/tournament.html
@@ -171,7 +171,8 @@
          <p style="color: blueviolet;">Ready to Join</p>
          <p>Create your account today and start competing in tournaments, joining elite teams, and climbing the leaderboard.</p>
          <div class="btn">
-         <button type="button" onclick="window.location.href='#'">SIGN UP NOW</button>
+                  <button type="button" onclick="window.location.href='signup.html'">SIGN UP NOW</button>
+
 
          </div>
 
