--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>      
+      <meta name="description" content="Nexus Website">
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    </head>
@@ -81,10 +82,10 @@
                   <p>The ultimate platform for competitive gaming. Join tournaments, connect with teams, and rise through the ranks.</p>
                </div>
                <ul class="icons">
-                  <li><a href="#"><i class="fa-brands fa-twitter" style="color: #74C0FC;"></i></a></li>
-                  <li><a href="#"><i class="fa-brands fa-youtube" style="color: #74C0FC;"></i></a></li>
-                  <li><a href="#"><i class="fa-brands fa-twitch" style="color: #74C0FC;"></i></a></li>
-                  <li><a href="#"><i class="fa-brands fa-instagram" style="color: #74C0FC;"></i></a></li>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-twitter" style="color: #74C0FC;"></i></a></li>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-youtube" style="color: #74C0FC;"></i></a></li>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-twitch" style="color: #74C0FC;"></i></a></li>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-instagram" style="color: #74C0FC;"></i></a></li>
                </ul>
 
                </ul>
