--- a/teams.html
+++ b/teams.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="Nexus Website">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -66,7 +67,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 
@@ -97,7 +98,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 
@@ -128,7 +129,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 
@@ -159,7 +160,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 </section>
@@ -192,7 +193,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 
@@ -223,7 +224,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 
@@ -254,7 +255,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 
@@ -285,7 +286,7 @@
       </div>
       <div class="view">
                 <a href="#" style="color: #B300FF;">View Team </a>
-               <a href=""><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
+               <a href="#" aria-label="goto"><i class="fa-solid fa-arrow-right fa-l" style="color: #B300FF;"></i></a>
     </div>
 </div>
 </section>
@@ -321,11 +322,11 @@
                   <p>The ultimate platform for competitive gaming. Join tournaments, connect with teams, and rise through the ranks.</p>
                </div>
                <ul class="icons">
-                  <li><a href="#"><i class="fa-brands fa-twitter" style="color: #74C0FC;"></i></a></li>
-                  <li><a href="#"><i class="fa-brands fa-youtube" style="color: #74C0FC;"></i></a></li>
-                  <li><a href="#"><i class="fa-brands fa-twitch" style="color: #74C0FC;"></i></a></li>
-                  <li><a href="#"><i class="fa-brands fa-instagram" style="color: #74C0FC;"></i></a></li>
-               </ul>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-twitter" style="color: #74C0FC;"></i></a></li>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-youtube" style="color: #74C0FC;"></i></a></li>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-twitch" style="color: #74C0FC;"></i></a></li>
+                  <li><a href="#" aria-label="icons"><i class="fa-brands fa-instagram" style="color: #74C0FC;"></i></a></li>
+               </ul
 
                </ul>
             </div>
